[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "ie_utils"
author = "Pierre Mulliez"
author-email = "pierremulliez@student.ie.edu"
classifiers = [ "License :: OSI Approved :: MIT License",]
description-file = "READme.md"
requires = [
    "pandas",
    "nltk"
]

[tool.flit.metadata.requires-extra]
dev = [
"black"
]

[tool.flit.entrypoints."console_scripts"]
ie_tokenize = "ie_utils.__main__:main"